--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ confusable-homoglyphs==3.2.0
 Django==1.11
 django-bootstrap4==0.0.8
 django-registration==2.4.1
+Pillow==6.1.0
 psycopg2==2.8.3
 pytz==2019.1
 sqlparse==0.3.0
