--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 confusable-homoglyphs==3.2.0
 Django==1.11
+django-bootstrap3==11.0.0
 django-bootstrap4==0.0.8
 django-registration==2.4.1
 Pillow==6.1.0
